# tiffslide-xarray

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
test/: test_data.py  test_grid.py  test_wsi.py
tiffslide_xarray/: __init__.py  _version.py  accessors.py  attrs.py  data.py  grid.py  intake.py
