[tool.poetry]
name = "tiffslide_xarray"
version = "0.0"
description = "Xarray extension that uses xarray to lazy read 2D Tiff files."
authors = ["S. Joshua Swamidass <swamidass@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/swamidasslab/tiffslide-xarray"
repository = "https://github.com/swamidasslab/tiffslide-xarray"
keywords = ["tiffslide", "xarray"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[tool.poetry.dependencies]
python = "^3.9"
xarray = "^2023.9.0"
xarray-datatree = "^0.0.12"
dm-tree = "^0.1.8"
envsubst = "^0.1.5"
ruamel-yaml = "^0.18.5"
pydantic = "^2.4.2"

[tool.poetry.plugins."xarray.backends"]
tiffslide = "tiffslide_xarray:TiffBackendEntrypoint"

[tool.poetry.plugins."intake.drivers"]
tiffslide_glob = "tiffslide_xarray.intake:TiffSlideGlob"
tiffslide = "tiffslide_xarray.intake:TiffSlideSource"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
tiffslide = "^2.2.0"
poetry-dynamic-versioning = ">=1.0.0,<2.0.0"
hypothesis = "^6.88.4"
requests = "^2.31.0"
aiohttp = "^3.8.6"

[tool.poetry.group.tiff.dependencies]
tiffslide = "^2.2.0"


[tool.poetry.group.intake.dependencies]
intake-xarray = "^0.7.0"
intake-pattern-catalog = "^2023.3.0"
intake = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
folders = [{ "path" = "tiffslide_xarray" }]
